zwallet/infra/k8s/operators/namespace-labels.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zwallet
  labels:
    istio-injection: enabled
